minor cleanu to API; apps controller; starting pieline generation work
