# app/resources/api/v1/app_resource.rb
@@ -1,0 +1,8 @@
+module Api
+  module V1
+    class AppResource < JSONAPI::Resource
+      has_many :components
+      attributes :name, :repo, :description, :pipeline
+    end
+  end
+end
