# config/routes.rb
@@ -1,3 +1,13 @@
 Rails.application.routes.draw do
-  # For details on the DSL available within this file, see http://guides.rubyonrails.org/routing.html
+  namespace :api do
+    namespace :v1 do
+      jsonapi_resources :apps do
+        jsonapi_resources :components do
+        end
+      end
+      jsonapi_resources :component_types, path: "compoent-types"  do
+      end
+      resources :docs, only: [:index]
+    end
+  end
 end
